--- a/app/index.html
+++ b/app/index.html
@@ -18,19 +18,17 @@
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <header>
-      <h1>Check-It</h1>
-      <h2>Before you wreck-it</h2>
+    <header id="main-header">
+      <h1 class="app-title">Check-It</h1>
+      <h2 class="app-sub-title">Before you wreck-it</h2>
     </header>
 
     <!-- Add your site or application content here -->
     <div class="container">
-    <div ng-view="">
-    </div>
+      <div ng-view=""></div>
     </div>
 
-    <div class="footer">
-    </div>
+    <div class="footer"></div>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
