--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/view.js"></script>
+        <script src="scripts/directives/checklist.js"></script>
         <script src="scripts/directives/checklist-item.js"></script>
         <!-- endbuild -->
 </body>
